--- a/themes/butterfly/source/css/_custom/custom.css
+++ b/themes/butterfly/source/css/_custom/custom.css
@@ -3652,14 +3652,14 @@ hr:before {
 }
 
 /* 文章页面图片展示自适应 */
-#article-container {
-  .blog-img {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(305px, 1fr));
-    gap: 30px 15px;
+#article-container .blog-img {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(305px, 1fr));
+  gap: 30px 15px;
+  margin-bottom: 10px;
+}
 
-    a {
-      display: inline-block;
-    }
-  }
+
+#article-container .blog-img a {
+  display: inline-block;
 }
