修改图片a标签外包裹div以及样式

--- a/source/box/collect/点击轮播图/index.css
+++ b/source/box/collect/点击轮播图/index.css
@@ -39,35 +39,35 @@ body {
 }
 
 .img:nth-child(1) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/99.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/99.webp");
 }
 
 .img:nth-child(2) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/98.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/98.webp");
 }
 
 .img:nth-child(3) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/104.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/104.webp");
 }
 
 .img:nth-child(4) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/105.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/105.webp");
 }
 
 .img:nth-child(5) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/103.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/103.webp");
 }
 
 .img:nth-child(6) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/101.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/101.webp");
 }
 
 .img:nth-child(7) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/110.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/110.webp");
 }
 
 .img:nth-child(8) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/102.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/102.webp");
 }
 
 .min-images {
@@ -91,35 +91,35 @@ body {
 }
 
 .min:nth-child(1) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/99.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/99.webp");
 }
 
 .min:nth-child(2) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/98.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/98.webp");
 }
 
 .min:nth-child(3) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/104.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/104.webp");
 }
 
 .min:nth-child(4) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/105.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/105.webp");
 }
 
 .min:nth-child(5) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/103.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/103.webp");
 }
 
 .min:nth-child(6) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/101.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/101.webp");
 }
 
 .min:nth-child(7) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/110.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/110.webp");
 }
 
 .min:nth-child(8) {
-    background-image: url("https://cdn.staticaly.com/gh/1405720461/images@master/One_piece/102.webp");
+    background-image: url("https://cdn.jsdelivr.net/gh/1405720461/images@master/One_piece/102.webp");
 }
 
 
