--- a/themes/butterfly/source/css/_custom/custom.css
+++ b/themes/butterfly/source/css/_custom/custom.css
@@ -162,9 +162,8 @@ h1.post-title {
 center#name-container {
   position: absolute !important;
   width: fit-content !important;
-  left: 42% !important;
-  /* transform: translateX(-50%) !important; */
-  /* transform: translateY(-100%) !important; */
+  left: 50%;
+  transform: translate(-50%);
 }
 
 @media screen and (max-width: 768px) {
