--- a/source/css/about.css
+++ b/source/css/about.css
@@ -2,30 +2,32 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    .about_me {
+        display: flex;
+        align-items: center;
+
+        .darling_ico {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            margin-left: 5px;
+        }
+    }
+
+    .darling_png {
+        display: inline-block;
+        width: 180px;
+        margin-right: 10px;
+    }
+
+    div img {
+        border-radius: 0 !important;
+        border: 0px !important;
+    }
 }
 
-.about-top .about_me {
-    display: flex;
-    align-items: center;
-}
 
-.about-top .about_me .darling_ico {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    margin-left: 5px;
-}
-
-.about-top div img {
-    border-radius: 0 !important;
-    border: 0px !important;
-}
-
-.darling_png {
-    display: inline-block;
-    width: 180px;
-    margin-right: 10px;
-}
 
 .iconfont {
     margin: 0 5px;
@@ -38,60 +40,61 @@ div#page {
 
 .about_page {
     background: rgba(253, 253, 253, 1);
-}
 
-.about_page p {
-    margin: 0 20px 16px !important;
+    p {
+        margin: 0 20px 16px !important;
+    }
 }
 
 #page .about_page.benediction {
     display: flex;
 }
 
-.about_page.benediction #benediction-left {
-    width: 70%;
-}
+.about_page.benediction {
+    #benediction-left {
+        width: 70%;
 
-.about_page.benediction #benediction-right {
-    width: 30%;
-    margin-left: 50px;
-    display: flex;
-}
+        p:nth-child(1) {
+            margin: 0 20px;
+        }
 
-.about_page.benediction div p {
-    font-size: 20px;
-}
+        p:nth-child(2) {
+            margin: 15px 20px;
+        }
 
-.about_page.benediction #benediction-left p:nth-child(1) {
-    margin: 0 20px;
-}
+        p:nth-child(1)::first-letter {
+            font-size: 200%;
+        }
+    }
 
-.about_page.benediction #benediction-left p:nth-child(2) {
-    margin: 15px 20px;
-}
+    #benediction-right {
+        width: 30%;
+        margin-left: 50px;
+        display: flex;
 
+        img {
+            position: relative;
+            width: 150px;
+            height: 150px;
+            z-index: 10;
+        }
 
-.benediction #benediction-left p:nth-child(1)::first-letter {
-    font-size: 200%;
-}
+        span {
+            width: 130px;
+            height: 45px;
+            margin-top: 34px;
+            font-size: 25px;
+            opacity: 0;
+            transform: translate(-132px, 0px);
+            transition: all 1.0s;
+            transition-timing-function: cubic-bezier(0.56, 1.35, 0.52, 1.00);
+            /* 加入回弹动画 */
+        }
+    }
 
-.benediction #benediction-right img {
-    position: relative;
-    width: 150px;
-    height: 150px;
-    z-index: 10;
-}
-
-.benediction #benediction-right span {
-    width: 130px;
-    height: 45px;
-    margin-top: 34px;
-    font-size: 25px;
-    opacity: 0;
-    transform: translate(-132px, 0px);
-    transition: all 1.0s;
-    transition-timing-function: cubic-bezier(0.56, 1.35, 0.52, 1.00);
-    /* 加入回弹动画 */
+    div p {
+        font-size: 20px;
+    }
 }
 
 /* 你好可爱图片动画 */
