✨ feat(友人帐): 添加友链，修改友链字段

--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -42,13 +42,12 @@
         .img-group-item
           a(href='https://www.fomal.cc/' title='Fomalhaut🥝')
             img(src='https://www.fomal.cc/assets/avatar.webp' alt='')
-   
-        //- .img-group-item
-        //-   a(href='javascript:void(0)' title='广告位招租')
-        //-     img(src='https://cdn.jsdelivr.net/gh/1405720461/images@master/img/188.jpg' alt='')
-        //- .img-group-item
-        //-   a(href='javascript:void(0)' title='广告位招租')
-        //-     img(src='https://cdn.jsdelivr.net/gh/1405720461/images@master/img/188.jpg' alt='')
+        .img-group-item
+          a(href='https://shi-longwei.gitee.io/blog/' title='梦寐')
+            img(src='https://cdn.jsdelivr.net/gh/shizhiweid/blogimg@main/imgs/202306041724989.jpg' alt='')
+        .img-group-item
+          a(href='https://www.blackcrow.cn' title='黑乌鸦')
+            img(src='https://www.blackcrow.cn/blogs-img/%E9%85%8D%E7%BD%AE/%E5%A4%B4%E5%83%8F.png' alt='')
         //- .img-group-item
         //-   a(href='javascript:void(0)' title='广告位招租')
         //-     img(src='https://cdn.jsdelivr.net/gh/1405720461/images@master/img/188.jpg' alt='')
