--- a/themes/butterfly/layout/includes/page/flink_style/flexcard.pug
+++ b/themes/butterfly/layout/includes/page/flink_style/flexcard.pug
@@ -12,8 +12,8 @@
           each item in i.link_list
             a.flink-list-card(href=url_for(item.link) target='_blank' data-title=item.descr)
               .wrapper.cover
-                - var siteshot = item.siteshot ? url_for(item.siteshot) : 'https://image.thum.io/get/width/400/crop/800/allowJPG/wait/20/noanimate/' + item.link
-                img.no-lightbox.cover.fadeIn(src=siteshot onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.post_page) + `'` alt='' )    
+                - var screenshot = item.screenshot ? url_for(item.screenshot) : 'https://image.thum.io/get/width/400/crop/800/allowJPG/wait/20/noanimate/' + item.link
+                img.no-lightbox.cover.fadeIn(src=screenshot onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.post_page) + `'` alt='' )    
               .info
                 img.no-lightbox(src=url_for(item.avatar) onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.flink) + `'` alt='' )
                 span.flink-sitename= item.name
