--- a/themes/butterfly/layout/includes/page/flink_style/volantis.pug
+++ b/themes/butterfly/layout/includes/page/flink_style/volantis.pug
@@ -14,8 +14,8 @@
           each item in i.link_list
             a.site-card(target='_blank' rel='noopener' href=url_for(item.link))
               .img
-                - var siteshot = item.siteshot ? url_for(item.siteshot) : 'https://image.thum.io/get/allowJPG/wait/20/width/600/crop/950/' + item.link
-                img.no-lightbox(src=siteshot onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.post_page) + `'` alt='' )
+                - var screenshot = item.screenshot ? url_for(item.screenshot) : 'https://image.thum.io/get/allowJPG/wait/20/width/600/crop/950/' + item.link
+                img.no-lightbox(src=screenshot onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.post_page) + `'` alt='' )
               .info
                 img.no-lightbox(src=url_for(item.avatar) onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.flink) + `'` alt='' )
                 span.title= item.name
