--- a/source/box/collect/12个动画/动画/动画1/1.css
+++ b/source/box/collect/12个动画/动画/动画1/1.css
@@ -8,7 +8,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(./map.png) no-repeat -410px -80px;
+    background: url(./map.webp) no-repeat -410px -80px;
 }
 
 .beijing {
