🎈 perf: 优化部分代码

--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -16,9 +16,9 @@
               a(href='/comments/') 留点什么
             li
               a(href='/social/time/') 建设进程
-              a(href='/box/Gallery/') 我的画廊
+              a(href='/box/gallery/') 我的画廊
             li
-              a(href='/life/bangumis/') 我的追番
+              a(href='/relaxation/bangumis/') 我的追番
               a(href='/box/collect/') 我的收藏
             li
               a(href='/archives/') 文章归档
