--- a/themes/butterfly/source/css/_custom/custom.css
+++ b/themes/butterfly/source/css/_custom/custom.css
@@ -2476,8 +2476,7 @@ span.card-clock-weather {
 }
 
 /* 公告栏、微博 */
-.anno_content:hover,
-.weibo-title:hover {
+.anno_content:hover {
   border-bottom: 2px solid var(--theme-color) !important;
 }
 
@@ -2948,67 +2947,6 @@ figure.highlight pre .deletion {
   color: #f669f6;
 }
 
-/* 新年侧边栏 */
-
-#newYear {
-  color: white;
-  padding: 0 !important;
-}
-
-#newYear p,
-#newYear h3 {
-  font-weight: normal;
-  color: inherit;
-  margin: 0;
-}
-
-#newYear .item-headline {
-  display: none;
-}
-
-#newYear-main {
-  min-height: 160px;
-  padding: 1rem;
-  position: relative;
-  border-radius: 12px;
-  background-image: url(https://tuchuang.voooe.cn/images/2023/01/02/tunian.webp);
-  background-size: cover;
-  background-position: center;
-}
-
-#newYear-main * {
-  position: relative;
-  line-height: 1.3;
-}
-
-#newYear-main .newYear-time {
-  font-weight: bold;
-  text-align: center;
-}
-
-#newYear-main .time,
-#newYear-main .happyNewYear {
-  font-size: 3.5rem;
-  margin: 1rem 0;
-  display: block;
-}
-
-#newYear-main .day {
-  font-size: 5rem;
-}
-
-#newYear-main .day .unit {
-  font-size: 1rem;
-}
-
-#newYear-main .mask {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
-}
 
 /* 夜间模式友链文字颜色 */
 [data-theme="dark"] .site-card .info .desc {
