--- a/themes/butterfly/source/css/_custom/custom.css
+++ b/themes/butterfly/source/css/_custom/custom.css
@@ -1879,9 +1879,12 @@ a:hover {
 /* 帧率检测 */
 #fps {
   position: fixed;
-  left: 10px;
+  right: 10px;
   bottom: 10px;
   z-index: 1919810;
+  height: 30px;
+  display: flex;
+  align-items: center;
 }
 
 [data-theme="light"] #fps {
@@ -3400,8 +3403,8 @@ hr:before {
 }
 
 /* ----- 底部音乐播放器 ----- */
-.aplayer.aplayer-fixed {
-  bottom: 63px !important;
+.aplayer {
+  min-height: 66px;
 }
 
 .aplayer .aplayer-lrc {
@@ -3409,7 +3412,7 @@ hr:before {
 }
 
 .aplayer.aplayer-fixed .aplayer-body {
-  bottom: 60px !important;
+  bottom: 0px !important;
 }
 
 .aplayer.aplayer-fixed .aplayer-list {
