--- a/themes/butterfly/layout/includes/widget/card_poem.pug
+++ b/themes/butterfly/layout/includes/widget/card_poem.pug
@@ -3,7 +3,7 @@
     #poem_info
         #poem_dynasty
         #poem_author
-script(src='https://cdn.jsdelivr.net/npm/js-heo@1.0.11/poem/jinrishici.js', charset='utf-8')
+script(src='https://fastly.jsdelivr.net/npm/js-heo@1.0.11/poem/jinrishici.js', charset='utf-8')
 script(type='text/javascript').
   jinrishici.load(function(result) {
   var sentence = document.querySelector("#poem_sentence")
